# synapse

./: .gitignore  Dockerfile  README.md  demo.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  curriculum.py  environment.py  generator.py  graders.py  scenarios.py
static/: index.html
