[project]
name = "synapse"
version = "5.0.0"
description = "SYNAPSE — AI Model Incident Response OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "openai==2.7.2",
    "requests==2.32.3",
    "pyyaml==6.0.2",
    "openenv-core>=0.2.0",
]

[project.scripts]
# Entry point MUST reference "main" function — OpenEnv validator requirement
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
